--- a/src/client/App.scss
+++ b/src/client/App.scss
@@ -3,7 +3,11 @@
   .btn:focus,.btn:active {
     outline: none !important;
     box-shadow: none;
+    
  }
+ .cardSection{
+  background-color: #F1F1F1;
+}
  
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   .navbar{
@@ -19,11 +23,4 @@
       }
     }
   }  
-}
-
-.token {
-  height: 150px;
-  width: 150px;
-  border-radius: 50%;
-  display: inline-block;
 }
