--- a/src/client/App.scss
+++ b/src/client/App.scss
@@ -6,7 +6,7 @@
     
  }
  .cardSection{
-  background-color: #F1F1F1;
+  padding-top: 0.25rem !important;
 }
  
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
