--- a/src/client/modals/confirmation/confirmation.scss
+++ b/src/client/modals/confirmation/confirmation.scss
@@ -1,6 +1,8 @@
-.modal-dialog{
-    position: absolute;
-    top: 30%;
-    left: 35%;
-    width: 500px;
+.confirmation-popup{
+    .modal-dialog{
+        position: absolute;
+        top: 30%;
+        left: 35%;
+        width: 500px;
+    }
 }
