--- a/src/client/components/Rack/Rack.scss
+++ b/src/client/components/Rack/Rack.scss
@@ -1,7 +1,15 @@
-.tokenCard{
-    width: 200px;
-    .rack-card-body, .rack-card-footer{
-        padding: 0.5rem;
+
+.cardDeck{
+    flex-flow: nowrap;
+    .tokenCard{
+        width: 200px;
+        height: 300px;
+        .rack-card-body, .rack-card-footer{
+            padding: 0.5rem;
+        }
+        .tokenCardImage{
+            height: 180px;
+        }
     }
 }
 .rackTitle{
