--- a/src/client/modals/confirmation/confirmation.scss
+++ b/src/client/modals/confirmation/confirmation.scss
@@ -1,8 +1,3 @@
-.confirmation-popup{
-    .modal-dialog{
-        position: absolute;
-        top: 30%;
-        left: 35%;
-        width: 500px;
-    }
+.confirmationModal{
+    top:200px
 }
