--- a/src/client/modals/create-token/Modal.scss
+++ b/src/client/modals/create-token/Modal.scss
@@ -22,3 +22,15 @@
     
     }
 }
+
+.tokenModeCard{
+    height: 250px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    cursor: pointer;
+    flex-direction: initial;
+    &:hover{
+        
+    }
+}
